# agent-sdk-rs

./: 404.html  CHANGELOG.md  Cargo.toml  README.md  api-reference.html  comparison.html  examples.html  index.html  print.html  quickstart.html  searcher-c2a407aa.js  searchindex-5e4f08d4.js  toc-74803f66.js  toc.html  usage-patterns.html
.github/workflows/: mdbook.yml  release-plz.yml
docs/: book.toml
docs/src/: SUMMARY.md  api-reference.md  comparison.md  examples.md  introduction.md  quickstart.md  usage-patterns.md
examples/: di_override.rs  local_loop.rs
src/: error.rs  lib.rs
src/agent/: mod.rs  tests.rs
src/llm/: anthropic.rs  google.rs  grok.rs  mod.rs
src/tools/: claude_code.rs  mod.rs
