[package]
name = "rust-sdk"
version = "0.1.0"
edition = "2024"
description = "Minimal Rust agent SDK with tool-calling loop and Anthropic adapter"
license = "MIT"

[dependencies]
anthropic-ai-sdk = "0.2.27"
async-stream = "0.3.6"
async-trait = "0.1.89"
futures-util = "0.3.31"
serde_json = "1.0.145"
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
