[package]
name = "agent-sdk-rs"
version = "0.1.0"
edition = "2024"
description = "Minimal Rust agent SDK with tool-calling loop and Anthropic adapter"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Milind220/agent-sdk-rs"
homepage = "https://github.com/Milind220/agent-sdk-rs"
documentation = "https://docs.rs/agent-sdk-rs"
keywords = ["agent", "llm", "anthropic", "tools", "sdk"]
categories = ["asynchronous", "api-bindings"]

[features]
default = []
claude-code = []

[dependencies]
anthropic-ai-sdk = "0.2.27"
async-stream = "0.3.6"
async-trait = "0.1.89"
futures-util = "0.3.31"
glob = "0.3.3"
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.12"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time", "process"] }
walkdir = "2.5.0"

[[bin]]
name = "claude_code"
path = "src/bin/claude_code.rs"
required-features = ["claude-code"]

[dev-dependencies]
